# planejador_financeiro

./: .gitignore  categorizer.py  data_cleaning.py  enums.py  main.py  planilha.py  pyproject.toml  tipo_transacao.py
aux/: recategorizacao.xlsx
