[tool.poetry]
name = "planejamento-financeiro"
version = "0.1.0"
description = ""
authors = ["hirobs <hiro.bs@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
streamlit = "^1.31.0"
xlrd = "^2.0.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
